[Downloader] Minor improvements for launch sequence